[package]
name = "patchutils"
version = "0.1.0"
edition = "2021"
authors = ["Tom Hubrecht <tom@hubrecht.ovh>"]
description = "Utilities for manipulating patch files"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Tom-Hubrecht/rust-patchutils"

[dependencies]
parsepatch = "0.3.1"
